Clock not centre on Firefox fix

--- a/style.css
+++ b/style.css
@@ -2,10 +2,14 @@
 
 body {
 	user-select: none;
+
 	display: flex;
   	justify-content: center;
   	align-items: center;
 	overflow: hidden;
+
+	height: 100vh;
+	margin: 0;
 }
 
 #random-container {
